# techops-docsite-update-automation

./: .gitignore  README.md  pyproject.toml
scripts/: e2e_demo.py
src/docsite_updater/: __init__.py  ai.py  config.py  demo.py  github.py  main.py  models.py  observability.py  queue.py  security.py  validator.py  webhook.py  worker.py
tests/: conftest.py  test_config.py  test_e2e_demo.py  test_github_client.py  test_observability_security.py  test_openrouter_ai.py  test_queue.py  test_validator.py  test_webhook.py  test_worker.py
tests/fixtures/: pull_request_closed_merged.json
